# llm-temperature-bench

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: pages.yml
.openai/: hosting.json
app/: globals.css  layout.jsx  page.jsx
configs/: benchmark.yaml  models.yaml  prompts.yaml  sampler-pilot.yaml
scripts/: bootstrap.sh  smoke_test.sh
study-site/: index.html  package-lock.json  package.json  vite.config.js
study-site/.openai/: hosting.json
study-site/app/: layout.jsx  page.jsx  styles.css
study-site/src/: main.jsx
tempbench/: __init__.py  __main__.py  cli.py  config.py  environment.py  generate.py  jobs.py  judge.py  metrics.py  report.py  storage.py
tests/: test_config.py  test_environment.py  test_judge.py  test_metrics.py  test_storage_report.py
tools/: build_dashboard_data.py  build_sampler_site_data.py
