[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "temperature-bench"
version = "0.1.0"
description = "Resumable local-LLM temperature degradation benchmark with Gemini judging"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "accelerate>=1.10,<2",
  "google-genai>=1.55,<2",
  "huggingface-hub>=0.36,<2",
  "numpy>=2.0,<3",
  "pydantic>=2.10,<3",
  "python-dotenv>=1.0,<2",
  "PyYAML>=6.0,<7",
  "rich>=13.9,<15",
  "safetensors>=0.5,<1",
  "sentencepiece>=0.2,<1",
  "tenacity>=9.0,<10",
  "transformers>=5.0,<6",
]

[project.optional-dependencies]
gpu = [
  "bitsandbytes>=0.49,<1",
  "torch>=2.7,<3",
  "torchvision>=0.22,<1",
]
dev = ["pytest>=8.3,<10", "ruff>=0.11,<1"]

[project.scripts]
tempbench = "tempbench.cli:main"

[tool.setuptools.packages.find]
include = ["tempbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
